[package]
name = "oxide"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
arboard = "3.6.1"
argon2 = "0.5.3"
base64 = "0.22.1"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
home = "0.5.12"
image = "0.25.10"
rpassword = "7.4.0"
rqrr = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
totp-rs = { version = "5.7.1", features = ["otpauth"] }
